apps/rhf-mui-docs/src/app/v2/introduction/page.mdx
import { DocsPage } from '@/components/docs';
import { pageMetadata } from '@/constants';

export const metadata = pageMetadata.introduction;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

<Callout type="warning" title="Deprecation of Version 2">
  It is highly recommended to upgrade to the latest version of both
  [Material UI](https://mui.com/material-ui/) and this package to access the newest
  features.

  If your project is currently using MUI `v5`, please upgrade this package
  to **version 3** by referring to the [v2 to v3 migration guide](/v3/migration-guide/v2-to-v3).

  For up-to-date documentation, see the **[latest version](/introduction).**
</Callout>

# Introduction

Easily design forms in minutes using the popular [React Hook Form](https://react-hook-form.com/)
library alongside [Material-UI](https://v6.mui.com/material-ui/getting-started/).

This package provides a suite of **20+ reusable and customizable components** specifically
designed to simplify form creation. Each component handles form binding and UI rendering
logic internally, minimizing code duplication and giving developers the flexibility to style form
form fields to match their website's design guidelines.

You can also find additional components in this package, such as **color picker** and **phone input**,
that are not currently part of Material UI but can be useful when you need them. More components will be
added based on community feedback. Feel free to raise a feature request or report a bug by contacting
the author of this package.

## Installation


To get started, install the following packages:
- [react-hook-form](https://www.npmjs.com/package/react-hook-form) `v7`
- [@mui/material](https://www.npmjs.com/package/@mui/material) `v6`
- [@mui/icons-material](https://www.npmjs.com/package/@mui/icons-material) `v6`
- [@nish1896/rhf-mui-components](https://www.npmjs.com/package/@nish1896/rhf-mui-components) `v2.1.4`

<PackageManagerTabs
  id="install-dependencies"
  command="react-hook-form@^7 @mui/material@^6 @mui/icons-material@^6 @nish1896/rhf-mui-components@2.1.4"
/>

You can refer to the [Material UI installation guide](https://v6.mui.com/material-ui/getting-started/installation/)
for installation instructions.

For date pickers, follow the [installation guide](https://v7.mui.com/x/react-date-pickers/getting-started/)
to install [@mui/x-date-pickers](https://www.npmjs.com/package/@mui/x-date-pickers).

**Optional**: If you are using a third party library for form validation, say
[joi](https://www.npmjs.com/package/joi), make sure to install its npm package along
with the [@hookform/resolvers](https://www.npmjs.com/package/@hookform/resolvers) package.

<PackageManagerTabs
  id="install-joi"
  command="@hookform/resolvers@^5 joi@^18"
/>
